--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>Isha Singh</h1>
             <p class="para">"Enthusiastic and Dedicated Computer Science Student with hands-on experience in Full-Stack Development and Better Understanding of DataStructures and Algorithms . Skilled in building end-to-end Web Applications, optimizing performance, and writing clean, efficient code. Passionate about learning new technologies, solving complex problems, and contributing to impactful software projects."</p>
             <div class="button-group">
-                <a href="" class="button">Download CV</a>
+                <a href="ISHA_SINGH_RESUME.pdf" class="button">Download CV</a>
                 <a href="" class="button">Contact</a>
             </div>
             <div class="socials">
@@ -154,4 +154,5 @@
         })
     </script>
 </body>
+
 </html>
